<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
  	android:title="Buzzurlアカウントの設定">
  	<EditTextPreference
  		android:key="username"
  		android:title="@string/title_username"
  		android:summary="@string/summary_username"
  		android:dialogTitle="@string/title_username">
  	</EditTextPreference>
  	<EditTextPreference
  		android:key="mail"
  		android:title="@string/title_mail"
  		android:summary="@string/summary_mail"
  		android:dialogTitle="@string/title_mail">
  	</EditTextPreference>
  	<EditTextPreference
  		android:key="password"
  		android:title="@string/title_password"
  		android:summary="@string/summary_password"
  		android:dialogTitle="@string/title_password"
  		android:password="true">
  	</EditTextPreference>
  	<Preference
  		android:key="back"
  		android:title="戻る">
  	</Preference>
  </PreferenceCategory>
</PreferenceScreen>
