<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical"
		android:paddingLeft="6dip" android:paddingTop="2dip"
		android:paddingRight="6dip" android:paddingBottom="2dip">
		<TableLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TableRow android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<TextView android:id="@+id/label_url" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/label_url"
					android:textAppearance="?android:attr/textAppearanceSmall" />
			</TableRow>
			<TableRow android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<EditText android:id="@+id/edit_url" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:layout_weight="1"
					android:hint="@string/hint_url" />
				<ProgressBar android:id="@+id/progress_url"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:visibility="gone" />
			</TableRow>
			<TableRow android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<TextView android:id="@+id/label_title"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/label_title" android:textAppearance="?android:attr/textAppearanceSmall" />
			</TableRow>
			<TableRow android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<EditText android:id="@+id/edit_title"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_weight="1" android:hint="@string/hint_title" />
				<ProgressBar android:id="@+id/progress_title"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:visibility="gone" />
			</TableRow>
			<TableRow android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<TextView android:id="@+id/label_notes"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/label_notes" android:textAppearance="?android:attr/textAppearanceSmall" />
			</TableRow>
			<TableRow android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<EditText android:id="@+id/edit_notes"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_weight="1" android:hint="@string/hint_notes" />
				<ProgressBar android:id="@+id/progress_notes"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:visibility="gone" />
			</TableRow>
		</TableLayout>
		<CheckBox android:id="@+id/access" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/access"
				android:layout_weight="1" android:checked="true" />
		<LinearLayout android:paddingTop="12dip"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="horizontal">
			<Button android:id="@+id/button_save" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/button_save"
				android:layout_weight="1" />
			<Button android:id="@+id/button_cancel" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/button_cancel"
				android:layout_weight="1" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>
